# 58brr

./: .gitignore  QUICK-START.md  README.md  pyproject.toml  requirements.txt
docs/: esp32-mqtt-setup.md  setup-guide.md  technical-details.md
esp32/: coolbot_esp32.ino
home-assistant/: coolbot-entities.yaml
node-red/config/: mqtt-topics.json  settings.json
node-red/flows/: coolbot-dashboard.json  coolbot-main-flow.json  coolbot-mqtt-dashboard.json  coolbot-mqtt-flow.json  coolbot-safety.json
scripts/: install-mqtt.sh  install.sh
